<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <variable
            name="poster_elements"
            type="ch.epfl.sweng.favors.favors.FavorPosterDetailView"
            />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="30dip"
            android:layout_margin="30dp">

            <TextView
                android:id="@+id/posterTitle"
                android:layout_width="match_parent"
                android:layout_height="91dp"
                android:paddingTop="30dip"
                android:textAlignment="center"
                android:textSize="30sp"
                android:text="@string/favorPosterDetailViewTitle" />


            <android.support.v7.widget.CardView
                android:id="@+id/view2"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                app:cardCornerRadius="80dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/profilePic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profilelogo" />
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:text="@string/first_name"
                android:textSize="@dimen/profile_fragment_database_object_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/posterFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/profil_fragment_bottom_padding"
                android:text="@{poster_elements.firstName}"
                android:textSize="@dimen/profile_fragment_database_content_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="@dimen/profile_fragment_database_object_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/posterLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/profil_fragment_bottom_padding"
                android:text="@{poster_elements.lastName}"
                android:textSize="@dimen/profile_fragment_database_content_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textSize="@dimen/profile_fragment_database_object_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{poster_elements.sex}"
                android:textSize="@dimen/profile_fragment_database_content_size"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/okButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="5dp"
                    android:paddingTop="30dip"
                    android:text="@android:string/ok"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="14sp"/>
                <Button
                    android:layout_marginStart="20dp"
                    android:id="@+id/writeMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="15dp"
                    android:paddingTop="30dip"
                    android:text="Write a message"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>